Second attempt fixing layout issues.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -134,7 +134,6 @@ a {
 
 .badge--small {
   font-size: 1.6rem;
-  padding: 0.5rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -404,10 +403,6 @@ a {
   position: absolute;
   top: -6px;
   right: 5%;
-}
-
-.plan--popular .badge {
-  margin-top: 2rem;
 }
 
 .plan:hover {
